@@ -67,7 +67,21 @@ lists, treating them as if they were vectors."
 				      (type-of lhs)
 				      (type-of rhs))))
   (:method ((lhs number) (rhs number))
-    (cl:+ lhs rhs)))
+    (cl:+ lhs rhs))
+  (:method ((lhs number) (rhs vector))
+    (let ((result (make-vector (length rhs))))
+      (do-each-vector-element (el rhs :index-symbol i)
+	(setf (elt result i) (cl:+ el lhs)))
+      result))
+  (:method ((lhs vector) (rhs number))
+    (let ((result (make-vector (length lhs))))
+      (do-each-vector-element (el lhs :index-symbol i)
+	(setf (elt result i) (cl:+ el rhs)))
+      result))
+  (:method ((lhs number) (rhs list))
+    (loop for i in rhs collect (cl:+ lhs i)))
+  (:method ((lhs list) (rhs number))
+    (loop for i in lhs collect (cl:+ rhs i))))
 
 (defgeneric c- (lhs rhs)
   (:documentation "Subtracts objects.")
