@@ -1,3 +1,8 @@
+2010-09-15  Rudy Neeser  <rudy.neeser@gmail.com>
+
+	* operations.lisp (c+): Added the ability to add a constant to a
+	vector.
+
 2010-09-14  Rudy Neeser  <rudy.neeser@gmail.com>
 
 	* interpolate.lisp (bilinear-interpolation): Added a method to
